fixed alignment issues

--- a/css/style.css
+++ b/css/style.css
@@ -448,7 +448,7 @@ span.border.one:after {
   background: #f4f4f4;
 }
 .about-left-grid ul li a {
-  padding: 0.6em 2em;
+  padding: 0.6em 1.5em;
   font-size: 1.2em;
   color: #00a78e;
   border: 2px solid #00a78e;
